# guile-beaglebone-io

./: .gitignore  LICENSE  Makefile.am  README.md  beagleio.scm  configure.ac  libtool
autom4te.cache/: output.0  requests  traces.0  traces.1  traces.2
example/: example.scm
guile-beagleio/: Makefile.am  common.c  common.h  constants.c  guile_beagleio_gpio.c  guile_beagleio_gpio.h  py_uart.c  python.h  scm_gpio.c  spimodule.c
guile-beagleio/bbio/: LICENSE  Makefile.am  event_gpio.h
src/: Makefile.am  common.h  constants.h  event_gpio.c  main.c  py_adc.c  py_gpio.c  py_pwm.c  scm_gpio.h
tests/: test-guile-beagleio-gpio.scm
